--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "rc-table": "^7.25.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +48,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.7.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.1.6"
   }
 }
